# codejam

./: .#stack.yaml  Setup.hs  codejam.cabal  stack.yaml
app/: Main.hs
backup/src/: CodeJam.hs
backup/src/CodeWars/: Snail.hs  TinyTreePassCompiler.hs
backup/src/QR/: Pancakes.hs  Prime.hs  TidyNumbers.hs
backup/src/R1/: AmpleSyrup.hs  ParentPartner.hs
backup/test/CodeWars/: BranceExpansionSpec.hs
backup/test/QR/: BathroomStallsSpec.hs  PanCakesSpec.hs  SleepSpec.hs
resources/: bathroom.in  codejam.out
src/: AmpleSyrup.hs  BathroomStalls.hs  CodeJam.hs  CoinJam.hs  Pancakes.hs  TidyNumbers.hs
src/CodeWars/: BraceExpansion.hs  CanYouGetTheLoop.hs  MoleculeToAtoms.hs  TinyTreePassCompiler.hs  TwiceLiner.hs
src/QR/: BathroomStalls.hs  Beam.hs  CoinJam.hs  FasionShow.hs  FindingAnAppointment.hs  Prime.hs  Sleep.hs  TidyNumbers.hs  TripletSort.hs
src/R1/: AmpleSyrup.hs  ParentPartner.hs
test/: BathroomStallsSpec.hs  PanCakesSpec.hs  PrimeSpec.hs  SleepSpec.hs  TidyNumbersSpec.hs  getPanCakesSpec.hs
test/CodeWars/: MoleculeToAtomsSpec.hs  SnailSpec.hs  TinyTreePassCompilerSpec.hs  TwiceLinerSpec.hs
test/QR/: BathroomStallsSpec.hs  PanCakesSpec.hs  PrimeSpec.hs  SleepSpec.hs  TidyNumbersSpec.hs
test/R1/: AmpleSyrupSpec.hs  ParentPartnerSpec.hs
