name:                codejam
version:             0.1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/codejam#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:     QR.Prime
--                     , Sleep
                     --, Pancakes
                     --, TidyNumbers
                     --, BathroomStalls
                     --, FasionShow
                     --, AmpleSyrup
                     , CodeJam
                     , R1.ParentPartner
                     , CodeWars.TwiceLiner
                     , CodeWars.TinyTreePassCompiler
                     , CodeWars.BraceExpansion
                     , CodeWars.MoleculeToAtoms
                     , CodeWars.Snail
  build-depends:       base >= 4.7
                     , containers
                     , mtl
                     , vector
                     , vector-algorithms
                     , random
                     , hspec
                     , primitive
                     , ghc-prim
  default-language:    Haskell2010
  extensions: TemplateHaskell, MultiParamTypeClasses, ViewPatterns
executable codejam-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , codejam
  default-language:    Haskell2010

test-suite codejam-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  build-depends:       base
                     , codejam
                     , containers
                     , vector
                     , vector-algorithms
                     , random
                     , mtl
                     , hspec
                     , QuickCheck
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions: TemplateHaskell, MultiParamTypeClasses, ViewPatterns

source-repository head
  type:     git
  location: https://github.com/githubuser/codejam
